# score-avnd-simple-template

./: CMakeLists.txt  README.md  addon.json  init.sh  init.zsh  release.sh
.github/workflows/: builds-dev.yaml  builds-sdk.yaml  builds.yaml  jit.yml  release.yml
MyAvndEffect/: MyAvndEffect.hpp  MyAvndEffectModel.cpp  MyAvndEffectModel.cppm  MyAvndEffectModel.hpp  MyAvndEffectUi.hpp
